@@ -12,6 +12,9 @@
  */
 package org.sonatype.nexus.repository;
 
+import java.time.Duration;
+import java.util.ArrayList;
+import java.util.List;
 import java.util.concurrent.Callable;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CountDownLatch;
@@ -19,497 +22,574 @@ import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ThreadFactory;
 import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Supplier;
+import java.util.stream.IntStream;
 
 import org.sonatype.goodies.testsupport.TestSupport;
 import org.sonatype.goodies.testsupport.group.VirtualThreadTestGroup;
 
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import com.google.common.base.Stopwatch;
 
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Tag;
+import org.junit.jupiter.api.Test;
+
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.greaterThan;
+import static org.hamcrest.Matchers.is;
+import static org.hamcrest.Matchers.lessThan;
+import static org.hamcrest.Matchers.notNullValue;
 
 /**
- * Support class for testing virtual thread behavior in repository operations.
+ * Support class for testing repository operations with virtual threads.
+ * Provides utilities for creating virtual threads, detecting thread pinning,
+ * and comparing performance between platform and virtual threads.
  * 
- * Provides utilities for creating virtual threads, detecting thread pinning, and comparing
- * performance between platform and virtual threads. This class is designed to help validate
- * that repository operations work correctly with Java 21's virtual threads and to identify
- * potential thread pinning issues.
- * 
- * <p>Key features:</p>
- * <ul>
- *   <li>Thread factory creation using Thread.ofVirtual().factory()</li>
- *   <li>Thread pinning detection with stack trace identification</li>
- *   <li>Performance comparison between platform and virtual threads</li>
- *   <li>High concurrency testing support</li>
- *   <li>I/O-bound operation testing with virtual threads</li>
- * </ul>
- * 
- * <p>Example usage:</p>
- * <pre>
- * // Compare performance between platform and virtual threads
- * PerformanceResult result = VirtualThreadTestSupport.compareThreadPerformance(
- *     () -> repository.doSomeOperation(), 1000);
- * log.info("Performance improvement: {}%", result.getImprovementPercentage());
- * 
- * // Test for thread pinning
- * VirtualThreadTestSupport.assertNoPinning(() -> repository.doSomeOperation());
- * 
- * // Run high concurrency test
- * VirtualThreadTestSupport.executeHighConcurrencyTest(
- *     () -> repository.doSomeOperation(), 10000, 60);
- * </pre>
- * 
- * <p>To run tests that use this class, use the {@code @Tag("virtual-threads")} annotation
- * and ensure the test is run with Java 21 or later.</p>
- * 
+ * This class is designed to help test and validate the behavior of repository
+ * operations when using Java 21's virtual threads, particularly for I/O-bound
+ * operations like network requests and file system access.
+ *
  * @since 3.60
  */
-@Tag("virtual-threads")
 public class VirtualThreadTestSupport
     extends TestSupport
 {
-  private static final Logger log = LoggerFactory.getLogger(VirtualThreadTestSupport.class);
-  
   /**
-   * Checks if the current JVM supports virtual threads.
-   * 
-   * @return true if virtual threads are supported, false otherwise
-   */
-  public static boolean isVirtualThreadsSupported() {
-    try {
-      // Try to create a virtual thread to check if it's supported
-      Thread vt = Thread.ofVirtual().start(() -> {});
-      vt.join();
-      return true;
-    }
-    catch (Throwable t) {
-      log.debug("Virtual threads not supported", t);
-      return false;
-    }
-  }
-  /**
-   * Creates a ThreadFactory that produces virtual threads.
-   * 
+   * Creates a virtual thread factory for use in tests.
+   *
    * @return a ThreadFactory that creates virtual threads
    */
-  public static ThreadFactory createVirtualThreadFactory() {
+  public static ThreadFactory virtualThreadFactory() {
     return Thread.ofVirtual().factory();
   }
-  
+
   /**
-   * Creates a ThreadFactory that produces virtual threads with the specified name prefix.
-   * 
-   * @param namePrefix the prefix for thread names
-   * @return a ThreadFactory that creates virtual threads with the specified name prefix
-   */
-  public static ThreadFactory createVirtualThreadFactory(String namePrefix) {
-    return Thread.ofVirtual().name(namePrefix).factory();
-  }
-  
-  /**
-   * Creates a ThreadFactory that produces platform threads.
-   * 
+   * Creates a platform thread factory for use in tests.
+   *
    * @return a ThreadFactory that creates platform threads
    */
-  public static ThreadFactory createPlatformThreadFactory() {
+  public static ThreadFactory platformThreadFactory() {
     return Thread.ofPlatform().factory();
   }
-  
+
   /**
-   * Creates a ThreadFactory that produces platform threads with the specified name prefix.
-   * 
-   * @param namePrefix the prefix for thread names
-   * @return a ThreadFactory that creates platform threads with the specified name prefix
+   * Creates an executor service that uses virtual threads.
+   *
+   * @return an ExecutorService that creates a new virtual thread for each task
    */
-  public static ThreadFactory createPlatformThreadFactory(String namePrefix) {
-    return Thread.ofPlatform().name(namePrefix).factory();
+  public static ExecutorService virtualThreadExecutor() {
+    return Executors.newThreadPerTaskExecutor(virtualThreadFactory());
   }
-  
+
   /**
-   * Creates an ExecutorService that creates a new virtual thread for each task.
-   * 
-   * @return an ExecutorService that uses virtual threads
+   * Creates an executor service that uses platform threads.
+   *
+   * @param nThreads the number of threads in the pool
+   * @return an ExecutorService with a fixed number of platform threads
    */
-  public static ExecutorService createVirtualThreadExecutor() {
-    return Executors.newVirtualThreadPerTaskExecutor();
+  public static ExecutorService platformThreadExecutor(int nThreads) {
+    return Executors.newFixedThreadPool(nThreads, platformThreadFactory());
   }
-  
-  /**
-   * Creates an ExecutorService that creates a new virtual thread with the specified name prefix for each task.
-   * 
-   * @param namePrefix the prefix for thread names
-   * @return an ExecutorService that uses virtual threads with the specified name prefix
-   */
-  public static ExecutorService createVirtualThreadExecutor(String namePrefix) {
-    return Executors.newThreadPerTaskExecutor(Thread.ofVirtual().name(namePrefix).factory());
-  }
-  
+
   /**
    * Detects if the current thread is a virtual thread.
-   * 
+   *
    * @return true if the current thread is a virtual thread, false otherwise
    */
   public static boolean isVirtualThread() {
     return Thread.currentThread().isVirtual();
   }
-  
+
   /**
-   * Runs a task with both platform and virtual threads and compares their performance.
-   * 
+   * Executes a task with both virtual and platform threads and compares their performance.
+   *
+   * @param task the task to execute
+   * @param iterations the number of iterations to run
+   * @param concurrency the number of concurrent threads
+   * @return a PerformanceResult containing the comparison results
+   * @throws Exception if an error occurs during execution
+   */
+  public static PerformanceResult compareThreadPerformance(
+      Runnable task,
+      int iterations,
+      int concurrency) throws Exception
+  {
+    // Measure platform thread performance
+    long platformStart = System.nanoTime();
+    runConcurrentTasks(task, iterations, concurrency, platformThreadExecutor(concurrency));
+    long platformDuration = System.nanoTime() - platformStart;
+
+    // Measure virtual thread performance
+    long virtualStart = System.nanoTime();
+    runConcurrentTasks(task, iterations, concurrency, virtualThreadExecutor());
+    long virtualDuration = System.nanoTime() - virtualStart;
+
+    return new PerformanceResult(platformDuration, virtualDuration);
+  }
+
+  /**
+   * Runs a task concurrently using the provided executor service.
+   *
    * @param task the task to run
-   * @param iterations the number of iterations to run the task
-   * @return a PerformanceResult containing the execution times for both thread types
+   * @param iterations the number of iterations
+   * @param concurrency the level of concurrency
+   * @param executor the executor service to use
    * @throws Exception if an error occurs during execution
    */
-  public static PerformanceResult compareThreadPerformance(Runnable task, int iterations) throws Exception {
-    log.info("Comparing performance between platform and virtual threads ({} iterations)", iterations);
-    
-    // Run with platform threads
-    log.info("Running with platform threads...");
-    long platformTime = measureExecutionTime(() -> {
-      try (ExecutorService executor = Executors.newFixedThreadPool(Runtime.getRuntime().availableProcessors())) {
-        for (int i = 0; i < iterations; i++) {
-          executor.submit(task);
-        }
-        executor.shutdown();
-        executor.awaitTermination(1, TimeUnit.MINUTES);
-      }
-      return null;
-    });
-    log.info("Platform thread execution time: {} ms", platformTime);
-    
-    // Run with virtual threads
-    log.info("Running with virtual threads...");
-    long virtualTime = measureExecutionTime(() -> {
-      try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
-        for (int i = 0; i < iterations; i++) {
-          executor.submit(task);
-        }
-        executor.shutdown();
-        executor.awaitTermination(1, TimeUnit.MINUTES);
-      }
-      return null;
-    });
-    log.info("Virtual thread execution time: {} ms", virtualTime);
-    
-    PerformanceResult result = new PerformanceResult(platformTime, virtualTime);
-    log.info("Performance comparison result: {}", result);
-    return result;
-  }
-  
-  /**
-   * Measures the execution time of a callable task.
-   * 
-   * @param task the task to measure
-   * @return the execution time in milliseconds
-   * @throws Exception if an error occurs during execution
-   */
-  public static long measureExecutionTime(Callable<Void> task) throws Exception {
-    long startTime = System.currentTimeMillis();
-    task.call();
-    return System.currentTimeMillis() - startTime;
-  }
-  
-  /**
-   * Executes a high concurrency test using virtual threads.
-   * 
-   * @param task the task to execute concurrently
-   * @param concurrency the number of concurrent threads to use
-   * @param timeoutSeconds the maximum time to wait for all tasks to complete
-   * @throws Exception if an error occurs during execution or if the timeout is exceeded
-   */
-  public static void executeHighConcurrencyTest(Runnable task, int concurrency, int timeoutSeconds) throws Exception {
-    log.info("Executing high concurrency test with {} virtual threads (timeout: {} seconds)", concurrency, timeoutSeconds);
-    
-    CountDownLatch latch = new CountDownLatch(concurrency);
-    AtomicInteger errorCount = new AtomicInteger(0);
-    AtomicReference<Exception> firstException = new AtomicReference<>();
-    
-    long startTime = System.currentTimeMillis();
-    try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
-      for (int i = 0; i < concurrency; i++) {
+  private static void runConcurrentTasks(
+      Runnable task,
+      int iterations,
+      int concurrency,
+      ExecutorService executor) throws Exception
+  {
+    try {
+      CountDownLatch latch = new CountDownLatch(iterations);
+      for (int i = 0; i < iterations; i++) {
         executor.submit(() -> {
           try {
             task.run();
+          } finally {
+            latch.countDown();
           }
-          catch (Exception e) {
-            log.error("Error in virtual thread task", e);
-            errorCount.incrementAndGet();
-            firstException.compareAndSet(null, e);
-          }
-          finally {
+        });
+      }
+      latch.await(5, TimeUnit.MINUTES);
+    } finally {
+      executor.shutdown();
+      executor.awaitTermination(1, TimeUnit.MINUTES);
+    }
+  }
+
+  /**
+   * Detects thread pinning by running a task and checking if it causes carrier thread blocking.
+   *
+   * @param task the task to check for thread pinning
+   * @return a ThreadPinningResult containing information about detected pinning
+   * @throws Exception if an error occurs during execution
+   */
+  public static ThreadPinningResult detectThreadPinning(Runnable task) throws Exception {
+    AtomicBoolean pinningDetected = new AtomicBoolean(false);
+    AtomicReference<StackTraceElement[]> pinningStackTrace = new AtomicReference<>();
+    
+    // Create a virtual thread to run the task
+    Thread virtualThread = Thread.ofVirtual().name("pinning-detection-thread").start(() -> {
+      task.run();
+    });
+    
+    // Wait a short time for the task to start
+    Thread.sleep(100);
+    
+    // Check if the thread is mounted (pinned)
+    StackTraceElement[] stackTrace = virtualThread.getStackTrace();
+    for (StackTraceElement element : stackTrace) {
+      // Look for indicators of thread pinning in the stack trace
+      if (element.getClassName().contains("synchronized") || 
+          element.getClassName().contains("ReentrantLock") ||
+          element.getClassName().contains("native") ||
+          element.getClassName().contains("java.util.concurrent.locks") ||
+          element.getClassName().contains("java.io.FileInputStream") ||
+          element.getClassName().contains("java.io.FileOutputStream") ||
+          element.getClassName().contains("java.net.Socket")) {
+        pinningDetected.set(true);
+        pinningStackTrace.set(stackTrace);
+        break;
+      }
+    }
+    
+    virtualThread.join(10000); // Wait for the thread to complete
+    
+    return new ThreadPinningResult(pinningDetected.get(), pinningStackTrace.get());
+  }
+
+  /**
+   * Runs a high concurrency test with virtual threads.
+   *
+   * @param task the task to run
+   * @param concurrency the number of concurrent threads to use
+   * @return the execution time in milliseconds
+   * @throws Exception if an error occurs during execution
+   */
+  public static long runHighConcurrencyTest(Runnable task, int concurrency) throws Exception {
+    ExecutorService executor = virtualThreadExecutor();
+    Stopwatch stopwatch = Stopwatch.createStarted();
+    
+    try {
+      List<CompletableFuture<Void>> futures = new ArrayList<>();
+      for (int i = 0; i < concurrency; i++) {
+        final int taskId = i;
+        CompletableFuture<Void> future = CompletableFuture.runAsync(
+            () -> {
+              Thread.currentThread().setName("virtual-task-" + taskId);
+              task.run();
+            }, 
+            executor
+        );
+        futures.add(future);
+      }
+      
+      // Wait for all tasks to complete
+      CompletableFuture.allOf(futures.toArray(new CompletableFuture[0]))
+          .orTimeout(5, TimeUnit.MINUTES)
+          .join();
+      
+      return stopwatch.elapsed(TimeUnit.MILLISECONDS);
+    } finally {
+      executor.shutdown();
+      executor.awaitTermination(1, TimeUnit.MINUTES);
+    }
+  }
+
+  /**
+   * Measures the execution time of a task using virtual threads.
+   *
+   * @param task the task to measure
+   * @param iterations the number of iterations to run
+   * @return the average execution time in milliseconds
+   * @throws Exception if an error occurs during execution
+   */
+  public static double measureVirtualThreadPerformance(Runnable task, int iterations) throws Exception {
+    ExecutorService executor = virtualThreadExecutor();
+    try {
+      long startTime = System.nanoTime();
+      CountDownLatch latch = new CountDownLatch(iterations);
+      
+      for (int i = 0; i < iterations; i++) {
+        executor.submit(() -> {
+          try {
+            task.run();
+          } finally {
             latch.countDown();
           }
         });
       }
       
-      boolean completed = latch.await(timeoutSeconds, TimeUnit.SECONDS);
-      if (!completed) {
-        throw new Exception("High concurrency test timed out after " + timeoutSeconds + " seconds");
-      }
+      latch.await(5, TimeUnit.MINUTES);
+      long endTime = System.nanoTime();
       
-      if (errorCount.get() > 0) {
-        Exception e = firstException.get();
-        throw new Exception("High concurrency test failed with " + errorCount.get() + " errors", e);
-      }
-    }
-    
-    long duration = System.currentTimeMillis() - startTime;
-    log.info("High concurrency test completed successfully in {} ms", duration);
-  }
-  
-  /**
-   * Detects thread pinning by analyzing the stack trace of the current thread.
-   * 
-   * @return a PinningInfo object containing information about pinning, or null if no pinning is detected
-   */
-  public static PinningInfo detectThreadPinning() {
-    if (!isVirtualThread()) {
-      return null; // Only virtual threads can be pinned
-    }
-    
-    StackTraceElement[] stackTrace = Thread.currentThread().getStackTrace();
-    
-    // Look for evidence of pinning in the stack trace
-    for (int i = 0; i < stackTrace.length; i++) {
-      StackTraceElement element = stackTrace[i];
-      
-      // Check for synchronized blocks/methods
-      if ((element.getMethodName().contains("monitor") || 
-           element.getMethodName().contains("synchronized")) && 
-          element.getClassName().startsWith("java.lang.")) {
-        log.debug("Detected synchronized block pinning at: {}", element);
-        return new PinningInfo(PinningReason.SYNCHRONIZED, element);
-      }
-      
-      // Check for native methods
-      if (element.isNativeMethod()) {
-        log.debug("Detected native method pinning at: {}", element);
-        return new PinningInfo(PinningReason.NATIVE_METHOD, element);
-      }
-      
-      // Check for VirtualThread pinning indicators
-      if (element.getClassName().equals("java.lang.VirtualThread") && 
-          element.getMethodName().contains("onPinned")) {
-        log.debug("Detected explicit pinning indicator at: {}", element);
-        // Look for the actual cause in the next few frames
-        for (int j = i + 1; j < Math.min(i + 5, stackTrace.length); j++) {
-          StackTraceElement causeElement = stackTrace[j];
-          if (!causeElement.getClassName().startsWith("java.lang.") && 
-              !causeElement.getClassName().startsWith("jdk.internal.")) {
-            return new PinningInfo(PinningReason.SYNCHRONIZED, causeElement);
-          }
-        }
-        return new PinningInfo(PinningReason.SYNCHRONIZED, element);
-      }
-    }
-    
-    return null;
-  }
-  
-  /**
-   * Enables thread pinning detection by setting the appropriate JVM system property.
-   * This should be called before running tests that need to detect pinning.
-   * 
-   * @param mode the pinning detection mode ("full" or "short")
-   */
-  public static void enablePinningDetection(String mode) {
-    if (!"full".equals(mode) && !"short".equals(mode)) {
-      throw new IllegalArgumentException("Mode must be 'full' or 'short'");
-    }
-    System.setProperty("jdk.tracePinnedThreads", mode);
-    log.info("Enabled virtual thread pinning detection with mode: {}", mode);
-  }
-  
-  /**
-   * Disables thread pinning detection by clearing the JVM system property.
-   */
-  public static void disablePinningDetection() {
-    System.clearProperty("jdk.tracePinnedThreads");
-    log.info("Disabled virtual thread pinning detection");
-  }
-  
-  /**
-   * Asserts that a task does not cause thread pinning when executed in a virtual thread.
-   * 
-   * @param task the task to test
-   * @throws Exception if the task causes thread pinning or another error occurs
-   */
-  public static void assertNoPinning(Runnable task) throws Exception {
-    AtomicReference<PinningInfo> pinningInfo = new AtomicReference<>();
-    AtomicReference<Exception> taskException = new AtomicReference<>();
-    
-    log.info("Testing for thread pinning...");
-    
-    // Enable pinning detection for this test
-    String originalPinningMode = System.getProperty("jdk.tracePinnedThreads");
-    try {
-      enablePinningDetection("full");
-      
-      Thread thread = Thread.ofVirtual().name("pinning-test").start(() -> {
-        try {
-          PinningInfo info = detectThreadPinning();
-          if (info != null) {
-            pinningInfo.set(info);
-            return;
-          }
-          task.run();
-          info = detectThreadPinning();
-          pinningInfo.set(info);
-        }
-        catch (Exception e) {
-          taskException.set(e);
-        }
-      });
-      
-      thread.join();
-      
-      // Check if the task threw an exception
-      if (taskException.get() != null) {
-        throw new Exception("Task threw an exception", taskException.get());
-      }
-      
-      // Check if pinning was detected
-      if (pinningInfo.get() != null) {
-        PinningInfo info = pinningInfo.get();
-        log.error("Thread pinning detected: {} at {}", info.reason, info.location);
-        Assertions.fail("Thread pinning detected: " + info.reason + " at " + info.location);
-      }
-      
-      log.info("No thread pinning detected");
-    }
-    finally {
-      // Restore original pinning detection setting
-      if (originalPinningMode != null) {
-        System.setProperty("jdk.tracePinnedThreads", originalPinningMode);
-      }
-      else {
-        disablePinningDetection();
-      }
+      return (endTime - startTime) / (double) iterations / 1_000_000.0; // Convert to ms
+    } finally {
+      executor.shutdown();
+      executor.awaitTermination(1, TimeUnit.MINUTES);
     }
   }
-  
+
   /**
-   * Enum representing the reason for thread pinning.
-   */
-  public enum PinningReason {
-    SYNCHRONIZED("Synchronized block or method"),
-    NATIVE_METHOD("Native method call"),
-    FOREIGN_FUNCTION("Foreign function call");
-    
-    private final String description;
-    
-    PinningReason(String description) {
-      this.description = description;
-    }
-    
-    @Override
-    public String toString() {
-      return description;
-    }
-  }
-  
-  /**
-   * Class representing information about thread pinning.
-   */
-  public static class PinningInfo {
-    public final PinningReason reason;
-    public final StackTraceElement location;
-    
-    public PinningInfo(PinningReason reason, StackTraceElement location) {
-      this.reason = reason;
-      this.location = location;
-    }
-  }
-  
-  /**
-   * Executes a task with virtual threads using CompletableFuture for I/O-bound operations.
-   * 
+   * Executes a task with retries using virtual threads.
+   *
+   * @param <T> the return type of the task
    * @param task the task to execute
-   * @param concurrency the number of concurrent operations
-   * @param timeoutSeconds the maximum time to wait for all tasks to complete
-   * @throws Exception if an error occurs during execution or if the timeout is exceeded
+   * @param maxRetries the maximum number of retries
+   * @param retryDelay the delay between retries
+   * @return the result of the task
+   * @throws Exception if the task fails after all retries
    */
-  public static void executeIOBoundTest(Runnable task, int concurrency, int timeoutSeconds) throws Exception {
-    log.info("Executing I/O-bound test with {} virtual threads (timeout: {} seconds)", concurrency, timeoutSeconds);
+  public static <T> T executeWithRetries(
+      Callable<T> task,
+      int maxRetries,
+      Duration retryDelay) throws Exception
+  {
+    AtomicInteger attempts = new AtomicInteger(0);
+    AtomicReference<Exception> lastException = new AtomicReference<>();
     
-    CompletableFuture<?>[] futures = new CompletableFuture[concurrency];
-    AtomicInteger errorCount = new AtomicInteger(0);
-    AtomicReference<Exception> firstException = new AtomicReference<>();
-    
-    long startTime = System.currentTimeMillis();
-    
-    for (int i = 0; i < concurrency; i++) {
-      futures[i] = CompletableFuture.runAsync(
-          task, 
-          Executors.newVirtualThreadPerTaskExecutor()
-      ).exceptionally(ex -> {
-        log.error("Error in I/O-bound task", ex);
-        errorCount.incrementAndGet();
-        if (ex instanceof Exception) {
-          firstException.compareAndSet(null, (Exception) ex);
+    while (attempts.incrementAndGet() <= maxRetries + 1) {
+      try {
+        return task.call();
+      } catch (Exception e) {
+        lastException.set(e);
+        if (attempts.get() <= maxRetries) {
+          Thread.sleep(retryDelay.toMillis());
         }
-        return null;
-      });
+      }
     }
     
-    // Wait for all futures to complete
-    CompletableFuture.allOf(futures).orTimeout(timeoutSeconds, TimeUnit.SECONDS).join();
-    
-    if (errorCount.get() > 0) {
-      Exception e = firstException.get();
-      throw new Exception("I/O-bound test failed with " + errorCount.get() + " errors", e);
-    }
-    
-    long duration = System.currentTimeMillis() - startTime;
-    log.info("I/O-bound test completed successfully in {} ms", duration);
+    throw new Exception("Failed after " + maxRetries + " retries", lastException.get());
   }
   
   /**
-   * Class representing the performance comparison results between platform and virtual threads.
+   * Simulates repository operations with configurable I/O latency for testing.
+   * 
+   * @param operationCount the number of operations to simulate
+   * @param ioLatencyMs the simulated I/O latency in milliseconds
+   * @param useVirtualThreads whether to use virtual threads
+   * @return the total execution time in milliseconds
+   * @throws Exception if an error occurs during execution
    */
-  public static class PerformanceResult {
-    public final long platformThreadTimeMs;
-    public final long virtualThreadTimeMs;
-    public final double improvementFactor;
+  public static long simulateRepositoryOperations(
+      int operationCount,
+      int ioLatencyMs,
+      boolean useVirtualThreads) throws Exception
+  {
+    Stopwatch stopwatch = Stopwatch.createStarted();
+    CountDownLatch latch = new CountDownLatch(operationCount);
     
-    public PerformanceResult(long platformThreadTimeMs, long virtualThreadTimeMs) {
-      this.platformThreadTimeMs = platformThreadTimeMs;
-      this.virtualThreadTimeMs = virtualThreadTimeMs;
-      this.improvementFactor = platformThreadTimeMs > 0 ? 
-          (double) platformThreadTimeMs / virtualThreadTimeMs : 0;
+    ExecutorService executor = useVirtualThreads ? 
+        virtualThreadExecutor() : 
+        platformThreadExecutor(Math.min(operationCount, 200));
+    
+    try {
+      // Submit all operations to the executor
+      IntStream.range(0, operationCount).forEach(i -> {
+        executor.submit(() -> {
+          try {
+            // Simulate I/O operation with the specified latency
+            Thread.sleep(ioLatencyMs);
+            return i; // Simulated result
+          } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+            throw new RuntimeException(e);
+          } finally {
+            latch.countDown();
+          }
+        });
+      });
+      
+      // Wait for all operations to complete
+      latch.await(5, TimeUnit.MINUTES);
+      return stopwatch.elapsed(TimeUnit.MILLISECONDS);
+    } finally {
+      executor.shutdown();
+      executor.awaitTermination(1, TimeUnit.MINUTES);
     }
-    
+  }
+
+  /**
+   * Result class for thread performance comparison.
+   */
+  public static class PerformanceResult
+  {
+    private final long platformDurationNanos;
+    private final long virtualDurationNanos;
+
+    public PerformanceResult(long platformDurationNanos, long virtualDurationNanos) {
+      this.platformDurationNanos = platformDurationNanos;
+      this.virtualDurationNanos = virtualDurationNanos;
+    }
+
+    /**
+     * Gets the execution time using platform threads in milliseconds.
+     *
+     * @return the platform thread execution time in ms
+     */
+    public double getPlatformDurationMs() {
+      return platformDurationNanos / 1_000_000.0;
+    }
+
+    /**
+     * Gets the execution time using virtual threads in milliseconds.
+     *
+     * @return the virtual thread execution time in ms
+     */
+    public double getVirtualDurationMs() {
+      return virtualDurationNanos / 1_000_000.0;
+    }
+
+    /**
+     * Calculates the performance improvement ratio of virtual threads compared to platform threads.
+     *
+     * @return the improvement ratio (values > 1 indicate virtual threads are faster)
+     */
+    public double getImprovementRatio() {
+      return (double) platformDurationNanos / virtualDurationNanos;
+    }
+
     /**
      * Checks if virtual threads performed better than platform threads.
-     * 
+     *
      * @return true if virtual threads were faster, false otherwise
      */
-    public boolean virtualThreadsFaster() {
-      return virtualThreadTimeMs < platformThreadTimeMs;
+    public boolean isVirtualThreadsFaster() {
+      return virtualDurationNanos < platformDurationNanos;
     }
-    
+  }
+
+  /**
+   * Result class for thread pinning detection.
+   */
+  public static class ThreadPinningResult
+  {
+    private final boolean pinningDetected;
+    private final StackTraceElement[] pinningStackTrace;
+
+    public ThreadPinningResult(boolean pinningDetected, StackTraceElement[] pinningStackTrace) {
+      this.pinningDetected = pinningDetected;
+      this.pinningStackTrace = pinningStackTrace;
+    }
+
     /**
-     * Gets the improvement percentage of virtual threads over platform threads.
-     * 
-     * @return the improvement percentage (positive if virtual threads were faster)
+     * Checks if thread pinning was detected.
+     *
+     * @return true if pinning was detected, false otherwise
      */
-    public double getImprovementPercentage() {
-      if (platformThreadTimeMs == 0) {
-        return 0;
+    public boolean isPinningDetected() {
+      return pinningDetected;
+    }
+
+    /**
+     * Gets the stack trace where pinning was detected.
+     *
+     * @return the stack trace elements or null if no pinning was detected
+     */
+    public StackTraceElement[] getPinningStackTrace() {
+      return pinningStackTrace;
+    }
+
+    /**
+     * Gets a formatted string representation of the pinning stack trace.
+     *
+     * @return a formatted stack trace string or "No pinning detected"
+     */
+    public String getFormattedStackTrace() {
+      if (!pinningDetected || pinningStackTrace == null) {
+        return "No pinning detected";
       }
-      return ((platformThreadTimeMs - virtualThreadTimeMs) / (double) platformThreadTimeMs) * 100.0;
+      
+      StringBuilder sb = new StringBuilder("Thread pinning detected:\n");
+      for (StackTraceElement element : pinningStackTrace) {
+        sb.append("  at ").append(element).append("\n");
+      }
+      return sb.toString();
     }
+  }
+
+  /**
+   * Simple test to verify that the virtual thread support is working correctly.
+   * This test is tagged with VirtualThreadTestGroup to allow selective execution.
+   */
+  @Test
+  @Tag(VirtualThreadTestGroup.NAME)
+  public void testVirtualThreadPerformance() throws Exception {
+    // A simple task that simulates I/O with sleep
+    Runnable ioTask = () -> {
+      try {
+        Thread.sleep(10); // Simulate I/O operation
+      } catch (InterruptedException e) {
+        Thread.currentThread().interrupt();
+      }
+    };
     
-    @Override
-    public String toString() {
-      return String.format("Platform threads: %d ms, Virtual threads: %d ms, Improvement: %.2f%%", 
-          platformThreadTimeMs, virtualThreadTimeMs, getImprovementPercentage());
-    }
+    // Compare performance with a moderate number of iterations and concurrency
+    PerformanceResult result = compareThreadPerformance(ioTask, 100, 50);
+    
+    // Virtual threads should be more efficient for I/O-bound operations
+    assertThat("Virtual threads should be faster for I/O operations", 
+        result.isVirtualThreadsFaster(), is(true));
+    
+    // For I/O-bound operations, virtual threads should show significant improvement
+    assertThat("Virtual threads should show significant improvement for I/O operations",
+        result.getImprovementRatio(), greaterThan(1.5));
+    
+    // Log the performance comparison results
+    log.info("Platform thread duration: {} ms", result.getPlatformDurationMs());
+    log.info("Virtual thread duration: {} ms", result.getVirtualDurationMs());
+    log.info("Improvement ratio: {}", result.getImprovementRatio());
+  }
+
+  /**
+   * Test to verify that thread pinning detection works correctly.
+   * This test is tagged with VirtualThreadTestGroup to allow selective execution.
+   */
+  @Test
+  @Tag(VirtualThreadTestGroup.NAME)
+  public void testThreadPinningDetection() throws Exception {
+    // A task that will cause thread pinning due to synchronized block
+    Runnable pinningTask = () -> {
+      Object lock = new Object();
+      synchronized (lock) {
+        try {
+          Thread.sleep(100); // Hold the lock for a while
+        } catch (InterruptedException e) {
+          Thread.currentThread().interrupt();
+        }
+      }
+    };
+    
+    // A task that should not cause thread pinning
+    Runnable nonPinningTask = () -> {
+      try {
+        Thread.sleep(100); // Simple sleep without synchronization
+      } catch (InterruptedException e) {
+        Thread.currentThread().interrupt();
+      }
+    };
+    
+    // Test pinning detection with a task that should cause pinning
+    ThreadPinningResult pinningResult = detectThreadPinning(pinningTask);
+    assertThat("Synchronized block should cause thread pinning", 
+        pinningResult.isPinningDetected(), is(true));
+    assertThat("Pinning stack trace should be available",
+        pinningResult.getPinningStackTrace(), notNullValue());
+    log.info("Pinning stack trace:\n{}", pinningResult.getFormattedStackTrace());
+    
+    // Test pinning detection with a task that should not cause pinning
+    ThreadPinningResult nonPinningResult = detectThreadPinning(nonPinningTask);
+    assertThat("Simple sleep should not cause thread pinning", 
+        nonPinningResult.isPinningDetected(), is(false));
+  }
+  
+  /**
+   * Test to verify high concurrency with virtual threads.
+   * This test is tagged with VirtualThreadTestGroup to allow selective execution.
+   */
+  @Test
+  @Tag(VirtualThreadTestGroup.NAME)
+  public void testHighConcurrencyVirtualThreads() throws Exception {
+    // Counter to track task execution
+    AtomicInteger counter = new AtomicInteger(0);
+    
+    // A simple task that increments the counter
+    Runnable task = () -> {
+      try {
+        // Simulate some work with a short sleep
+        Thread.sleep(5);
+        counter.incrementAndGet();
+      } catch (InterruptedException e) {
+        Thread.currentThread().interrupt();
+      }
+    };
+    
+    // Run with high concurrency (10,000 virtual threads)
+    int concurrency = 10_000;
+    long executionTime = runHighConcurrencyTest(task, concurrency);
+    
+    // Verify all tasks were executed
+    assertThat("All tasks should have been executed", 
+        counter.get(), is(concurrency));
+    
+    log.info("Executed {} concurrent tasks in {} ms using virtual threads", 
+        concurrency, executionTime);
+  }
+  
+  /**
+   * Test to compare repository operation performance between platform and virtual threads.
+   * This test is tagged with VirtualThreadTestGroup to allow selective execution.
+   */
+  @Test
+  @Tag(VirtualThreadTestGroup.NAME)
+  public void testRepositoryOperationsPerformance() throws Exception {
+    // Simulate repository operations with moderate concurrency and I/O latency
+    int operationCount = 1000;
+    int ioLatencyMs = 20; // Typical network/disk I/O latency
+    
+    // Run with platform threads
+    long platformTime = simulateRepositoryOperations(operationCount, ioLatencyMs, false);
+    log.info("Repository operations with platform threads: {} ms", platformTime);
+    
+    // Run with virtual threads
+    long virtualTime = simulateRepositoryOperations(operationCount, ioLatencyMs, true);
+    log.info("Repository operations with virtual threads: {} ms", virtualTime);
+    
+    // Calculate improvement ratio
+    double improvementRatio = (double) platformTime / virtualTime;
+    log.info("Improvement ratio: {}", improvementRatio);
+    
+    // Virtual threads should be more efficient for I/O-bound repository operations
+    assertThat("Virtual threads should be faster for repository operations",
+        virtualTime, lessThan(platformTime));
+    
+    // For I/O-bound operations, virtual threads should show significant improvement
+    assertThat("Virtual threads should show significant improvement for repository operations",
+        improvementRatio, greaterThan(1.5));
   }
 }
